# ace-compiler

./: .aci.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  Gemfile  Makefile  README.md  _config.yml  cgo2025-tutorial.md  config.cmake  index.md  migrate_to_github.sh  pyproject.toml  pytest.ini
.aci/: README.md  build-dev-images.sh  (+4 more)
ace_edsl/base_dsl/runtime/csrc/: CMakeLists.txt  dlpack_runtime.cpp
acepy/: CMakeLists.txt  build.sh  pyproject.toml  requirements.txt  setup.py
acepy/ace_dsl/: __init__.py  compiler.py
acepy/ace_dsl/bindings/: __init__.py  mock_air_builder.py  mock_fhe_cmplr.py  mock_nn_addon.py  mock_passmanager.py
acepy/ace_dsl/core/: __init__.py  air_value.py  registry.py  types.py
acepy/ace_dsl/frontend/: __init__.py  compile.py  decorator.py  domain_kernels.py  lowering_registry.py
acepy/ace_dsl/lowering/: __init__.py  nn_to_vector_ops.py  vector_to_sihe_ops.py
acepy/ace_dsl/lowerings/: __init__.py  conv_full_lowering.py  conv_lowering.py
acepy/ace_dsl/passes/: __init__.py  dce.py  python_lowering_pass.py  tensor2vector_pass.py  typeinfer.py
acepy/base_dsl/: __init__.py  ast_to_ir.py  compiler.py  loc.py  python_ir.py
acepy/examples/: CKKS_PLAINTEXT_TYPE_EXPLANATION.md  bootstrap_full.py  bootstrap_impl.py  bootstrap_poly2c.py  bootstrap_rtlib.py  ckks_lowering_demo.py  ckks_ops_demo.py  compile_resnet20.py  conv_lowering_demo.py  conv_relu_lowering.py  custom_lowering.py  custom_lowering_example.py  debug_sihe_domain.py  dump_utils.py  lenet_block.py  onnx_to_fhe_demo.py  real_tensor2vector.py  resnet20_initial_ir.txt  resnet20_selective_conv.txt  resnet20_transformed_ir.txt  selective_lowering_demo.py  sihe_lowering_demo.py  sihe_test.py  simple_add.py  simple_compile.py  test_bootstrap_compile.py  test_cipher_cipher.py  test_cipher_plain.py  test_cipher_scalar.py  test_ckks_kernel.py  test_ckks_only.py  test_custom_bootstrap.py  test_data_file_only.py  test_deferred_lowering.py  test_dump_flat.py  test_import_order.py  test_kernel_only.py  test_minimal_debug.py  test_native_compiler.py  test_python_lowering_bootstrap.py  (+10 more)
acepy/tests/: test_backward_compat.py  test_basic.py  test_bindings.py  test_ckks_plaintext_type.py  test_domain_params.py  test_kernels.py  test_loop_body.py  test_lowering_registry.py  test_matrix_vector.py  test_multi_shape_params.py  test_source_loc.py
acepy/tests/kernels/: __init__.py  attention.py  domain_levels.py  fft_fhe.py  lenet.py  matmul.py  simple_add.py  test_inline.py
bindings/: CMakeLists.txt  README.md
bindings/src/: air_builder_bindings.cpp  fhe_cmplr_bindings.cpp  nn_addon_bindings.cpp  onnx_loader.cpp  onnx_loader.h  passmanager_bindings.cpp  python_lowering_bridge.h  skipable_handler.h
compiler/: CMakeLists.txt  config.cmake  fetch_source.cmake  wrapper.cxx
compiler/air-infra/cmake/: function_common.cmake
compiler/air-infra/doc/: HSSA.md  IRSerialization.md
compiler/air-infra/driver/src/: global_config.cxx
compiler/air-infra/driver/unittest/: ut_driver.cxx
compiler/air-infra/include/air/base/: arena_core.h  flatten_ctx.h  ir_read.h  ir_write.h  opcode_gen.h  st.h
compiler/air-infra/include/air/core/: ir2c_handler.h
compiler/air-infra/opt/src/: bb.cxx  hssa_expr.cxx  pre_container.cxx
compiler/air-infra/opt/unittest/: ut_dead_store_elim.cxx
compiler/air-infra/plugin/: CMakeLists.txt
compiler/fhe-cmplr/: CMakeLists.txt
compiler/fhe-cmplr/ckks/include/: rt_validate_scale_level.h  scale_manager.h
compiler/fhe-cmplr/ckks/src/: ckks_cost_model.cxx  scale_manager.cxx
compiler/fhe-cmplr/cmake/modules/: fhe_rtlib.cmake
compiler/fhe-cmplr/poly/src/: poly2c_config.cxx  poly_driver.cxx  poly_ir_gen.cxx
compiler/fhe-cmplr/rtlib/: CMakeLists.txt
compiler/fhe-cmplr/rtlib/common/: CMakeLists.txt
compiler/nn-addon/: CMakeLists.txt
compiler/nn-addon/vector/src/: sharding_opt.cxx
fhe-cmplr/rtlib/ace/: CMakeLists.txt
fhe-cmplr/rtlib/ace/example/: add.onnx.inc  eg_rtace_library_add.cu  eg_rtace_library_add.inc  eg_rtace_library_add_const.cu  eg_rtace_library_add_const.inc  eg_rtace_library_boot.cu  eg_rtace_library_boot.inc  eg_rtace_library_conv2d_keep_shape.cu  eg_rtace_library_conv2d_keep_shape.inc  eg_rtace_library_mult_const.cu  eg_rtace_library_mult_const.inc  eg_rtace_library_relu-debug.inc  eg_rtace_library_relu.cu  eg_rtace_library_relu.inc  eg_rtace_library_rotate.cu  eg_rtace_library_rotate.inc
fhe-cmplr/rtlib/ace/src/: ace_lib.cu
fhe_dsl/csrc/: CMakeLists.txt
fhe_dsl/csrc/common/: CMakeLists.txt
fhe_dsl/csrc/common/src/: logging.cpp
fhe_dsl/csrc/cpu/: CMakeLists.txt
fhe_dsl/csrc/frontend/: CMakeLists.txt  pybind_extension.cxx
fhe_dsl/csrc/frontend/core/: air_context.cxx  func_builder.cxx  ir_builder.cxx  stmt_generator.cxx  symbol_table.cxx  type_factory.cxx
fhe_dsl/csrc/frontend/layers/: level_base.cxx  tensor_level.cxx  tensor_level_handler.cxx
fhe_dsl/csrc/frontend/ops/: op_registry.cxx  op_schema.cxx  torch_op_handler.cxx  torch_ops.cxx
fhe_dsl/csrc/runtime/: CMakeLists.txt  pybind_extension.cxx
fhe_dsl/csrc/runtime/include/: backend_manager.h  config_manager.h  config_parser.h  kernel_runner.h  log.h  rtlib_interface.h  validator.h
fhe_dsl/csrc/runtime/src/: backend_manager.cxx  batch_runner.cxx  config_manager.cxx  config_parser.cxx  kernel_runner.cxx  log.cxx  provider_manager.cxx  rtlib_interface.cxx  validator.cxx
fhe_lib/: CMakeLists.txt
fhe_lib/ace/: CMakeLists.txt  fetch_source.cmake
fhe_lib/ace/include/: ace_library_api.h  rt_def.h
fhe_lib/ace/include/rt_ace_library/: rt_ace_library.h
fhe_lib/ace/src/: ace_library_lib.cu
fhe_lib/hyperfhe/: CMakeLists.txt  fetch_source.cmake
fhe_lib/hyperfhe/include/: hyperfhe_api.h  rt_def.h  rt_hyperfhe.h
fhe_lib/hyperfhe/src/: hyperfhe_lib.cu
fhe_lib/phantom/: CMakeLists.txt  fetch_source.cmake
fhe_lib/phantom/example/: CMakeLists.txt  add.cu  add.inc
fhe_lib/phantom/include/: bootstrap_mgr.h  codec.h  context.h  key_mgr.h  phantom_api.h  pt_mgr.h  rt_def.h  rt_phantom.h
fhe_lib/phantom/src/: api.cu  context.cu  phantom_lib.cu  phantom_ops.cu  pt_mgr.cu  pt_mgr_api.cu
(+1088 files in other folders)
